# lsir-thesis-playground

./: .env  .gitignore  bertopic_gridsearch.py  config.yaml  data_parallel.py  extract_topics.py  generate_summary.ipynb  geography.ipynb  inference_gpt.py  notebook.ipynb  output_viewer.ipynb  post_process.ipynb  post_processing_multimodel.py  post_processing_new.py  post_processing_newest.py  pyproject.toml  report_schema.json  stakeholder_eval_set.txt  stakeholder_eval_set_answers.txt  summary.html  summary2.html  summary_format.json  temp.txt  wiki_anchor.ipynb  wiki_anchor_eval.py  wiki_data.py
